Use JDK 1.8 instead of 11 for doing tests